# conus_comparison_lafferty-etal-2026

./: README.md  pyproject.toml
scripts/: 01e_metrics_obs.ipynb  02d_averages.ipynb  03a_sa-eva.ipynb  03b_sa-trends.ipynb  03c_sa-averages.ipynb  04a_main_plots.ipynb  04b_si_plots.ipynb  04c_si_city_checks.ipynb  05_gev_evals.ipynb  06_zenodo_outputs.ipynb  99_additional_checks.ipynb  99_misc_figs.ipynb  misc.ipynb
src/: obs_utils.py  overview_plot_utils.py  plotting_utils.py  sa_city_utils.py  sa_utils.py  utils.py
