[project]
name = "conus-comparison-lafferty-etal-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.24.1",
    "dask-jobqueue>=0.9.0",
    "dask-labextension>=7.0.0",
    "dask>=2024.11.2",
    "distributed>=2024.11.2",
    "h5netcdf>=1.4.1",
    "ipywidgets>=8.1.5",
    "jax>=0.5.0",
    "jupyterlab>=4.3.0",
    "matplotlib>=3.9.2",
    "mpl-fontkit>=0.5.1",
    "netcdf4>=1.7.2",
    "numba>=0.61.0",
    "numpy<2.0.0",
    "numpyro>=0.16.1",
    "nutpie>=0.13.2",
    "pandas>=2.2.3",
    "pymc-extras>=0.2.1",
    "pymc>=5.15.0",
    "pytensor>=2.26.4",
    "rinoh-mscorefontinstaller>=0.1.0",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "xarray-regrid>=0.4.0",
    "xarray>=2024.10.0",
    "salem>=0.3.11",
    "bottleneck>=1.6.0",
    "fastnanquantile>=0.0.2",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4
